[package]
name = "mpOS"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.27"
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
pc-keyboard = "0.7.0"
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.1"
x86_64 = "0.15.1"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
